--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,44 +8,45 @@
     tools:context=".ui.MainActivity">
 
 
-    <ImageView
+
+
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/logo"
-        android:layout_width="348dp"
-        android:layout_height="456dp"
+        android:layout_width="410dp"
+        android:layout_height="510dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.207"
-        app:srcCompat="@drawable/appsplash" />
+        app:layout_constraintVertical_bias="0.322"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/aeramap"></com.airbnb.lottie.LottieAnimationView>
 
     <Button
         android:id="@+id/buttonLoc"
-        android:contentDescription="@string/pageLocalisation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="596dp"
+        android:contentDescription="@string/pageLocalisation"
         android:text="@string/Localisation"
-        app:layout_constraintBottom_toBottomOf="@id/logo"
+        app:layout_constraintHorizontal_bias="0.156"
         app:layout_constraintLeft_toLeftOf="@id/logo"
         app:layout_constraintRight_toRightOf="@id/logo"
-        app:layout_constraintTop_toTopOf="@id/logo"
-        app:layout_constraintVertical_bias="1.300"
-        />
-
+        app:layout_constraintTop_toTopOf="@id/logo" />
 
     <Button
         android:id="@+id/buttonhist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="448dp"
+        android:layout_marginTop="596dp"
         android:contentDescription="@string/Recycle"
         android:text="@string/Historique"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.881"
         app:layout_constraintLeft_toLeftOf="@id/logo"
         app:layout_constraintRight_toRightOf="@id/logo"
-        app:layout_constraintTop_toTopOf="@id/logo"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintTop_toTopOf="@id/logo" />
 
     <ImageView
         android:id="@+id/settings"
@@ -56,6 +58,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/parametre" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
