--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,40 +6,55 @@
     android:layout_height="match_parent"
     tools:context=".ui.SplashActivity">
 
+
     <TextView
         android:id="@+id/titreApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:textSize="22dp"
+        android:layout_marginTop="120dp"
         android:text="@string/retard"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="180dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-
-
-    <ImageView
-        android:id="@+id/imageSplash"
-        android:layout_width="316dp"
-        android:layout_height="347dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="368dp"
+        android:layout_height="363dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/appsplash" />
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/loading"></com.airbnb.lottie.LottieAnimationView>
+
+
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:textSize="20dp"
         android:text="@string/splash"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/imageSplash" />
+        app:layout_constraintTop_toBottomOf="@id/animation_view" />
 
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/splash2"
+        android:textSize="20dp"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView" />
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
