--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/loading"></com.airbnb.lottie.LottieAnimationView>
+        app:lottie_rawRes="@raw/load"></com.airbnb.lottie.LottieAnimationView>
 
 
 
