--- a/app/src/main/res/layout/activity_sensor.xml
+++ b/app/src/main/res/layout/activity_sensor.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <Button
+    <TextView
         android:id="@+id/capteurLuminosite"
         android:layout_width="200dp"
         android:layout_height="60dp"
@@ -17,5 +17,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.23" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
