--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btn_connection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/connexion"
+        android:text="@string/inscription"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.69"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,7 +43,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
- />
+        />
 
     <EditText
         android:id="@+id/password"
