--- a/app/src/main/res/layout/activity_sensor.xml
+++ b/app/src/main/res/layout/activity_sensor.xml
@@ -5,16 +5,30 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/capteurLuminosite"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:text="@string/luminosite"
-        android:textSize="18dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/sensor_list"
+        android:layout_width="387dp"
+        android:layout_height="650dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="60dp"
+        android:text="@string/app_name"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/historique"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="18dp"
+        android:text="@string/Historique"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.23" />
+        app:layout_constraintBottom_toTopOf="@id/historique" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
