--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:id="@+id/identity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="224dp"
+        android:layout_height="36dp"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@id/avatar"
         app:layout_constraintEnd_toStartOf="@id/avatar"
@@ -24,20 +24,31 @@
         android:layout_margin="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@tools:sample/avatars" />
+        android:src="@drawable/people" />
 
 
     <Button
-        android:id="@+id/testdelete"
+        android:id="@+id/deleteclient"
         android:layout_width="88dp"
         android:layout_height="32dp"
-        android:layout_marginLeft="188dp"
-        android:text="@string/normal"
+        android:layout_marginLeft="140dp"
+        android:text="@string/supp"
         android:textSize="18px"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.529" />
+        app:layout_constraintVertical_bias="0.203" />
+
+    <Button
+        android:id="@+id/modifierclient"
+        android:layout_width="88dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="140dp"
+        android:text="@string/modif"
+        android:textSize="18px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.297" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
