--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,16 @@
 
 
 
+
+    <com.google.android.material.navigationrail.NavigationRailView
+        android:id="@+id/navigation_rail"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_rail_menu" />
+
+
+
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/logo"
         android:layout_width="410dp"
@@ -22,7 +32,7 @@
         app:layout_constraintVertical_bias="0.322"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/beer"></com.airbnb.lottie.LottieAnimationView>
+        app:lottie_rawRes="@raw/beer" />
 
     <Button
         android:id="@+id/buttonLoc"
@@ -67,7 +77,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/parametre" />
+        app:srcCompat="@drawable/parametre"
+        android:contentDescription="TODO" />
 
 
 
