--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -28,6 +28,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonMap" />
 
+    <Button
+        android:id="@+id/buttonHistorique"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Historique"
+        app:layout_constraintHorizontal_bias="0.836"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="28dp" />
+
     <TextView
         android:id="@+id/textMap"
         android:layout_width="370dp"
