Modif Martin Modif Client

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -18,6 +18,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.248" />
 
+
+    <Button
+        android:id="@+id/buttonhist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Historique"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.06" />
+
     <Button
         android:id="@+id/buttonGoogleMap"
         android:layout_width="wrap_content"
@@ -40,10 +53,10 @@
 
     <TextView
         android:id="@+id/textMap"
-        android:layout_width="370dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginRight="24dp"
+        android:layout_width="333dp"
+        android:layout_height="71dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginRight="20dp"
         android:text="@string/espace"
         android:textSize="18dp"
         app:layout_constraintRight_toRightOf="parent"
