--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -6,32 +6,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
     <Button
-        android:id="@+id/testliste"
-        android:layout_width="88dp"
-        android:layout_height="32dp"
-        android:text="@string/normal"
-        android:textSize="18px"
+        android:id="@+id/btn_inscription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/inscription"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="@id/btn_connection"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.054" />
 
-    <Button
-        android:id="@+id/btn_inscription"
-        android:layout_width="88dp"
-        android:layout_height="32dp"
-        android:text="@string/inscription"
-        android:textSize="18px"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/logo"
+        android:layout_width="231dp"
+        android:layout_height="217dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="@id/btn_connection"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.241"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/login" />
 
     <Button
         android:id="@+id/btn_connection"
