--- a/app/src/main/res/layout/activity_sensor.xml
+++ b/app/src/main/res/layout/activity_sensor.xml
@@ -7,8 +7,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/sensor_list"
-        android:layout_width="387dp"
-        android:layout_height="650dp"
+        android:layout_width="392dp"
+        android:layout_height="519dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:text="@string/app_name"
@@ -17,18 +17,30 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/historique"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="173dp"
+        android:layout_height="42dp"
         android:layout_marginRight="18dp"
         android:text="@string/Historique"
-        android:textSize="18dp"
+        android:textSize="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sensor_list"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/enregisterSensor"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="104dp"
+        android:text="@string/Enregistrer"
+        android:textSize="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/sensor_list" />
+        app:layout_constraintTop_toBottomOf="@id/sensor_list"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
