--- a/app/src/main/res/layout/fragment_infodetails.xml
+++ b/app/src/main/res/layout/fragment_infodetails.xml
@@ -12,6 +12,41 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Nom Prénom" />
+        tools:text="identity" />
+
+
+    <ImageView
+        android:id="@+id/avatar"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/info" />
+
+
+    <Button
+        android:id="@+id/deleteinfo"
+        android:layout_width="88dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="140dp"
+        android:text="@string/supprimer"
+        android:textSize="18px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.203" />
+
+    <Button
+        android:id="@+id/modifierinfo"
+        android:layout_width="88dp"
+        android:layout_height="32dp"
+        android:layout_marginLeft="140dp"
+        android:text="@string/modifierMdp"
+        android:textSize="18px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.297" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
