--- a/app/src/main/res/menu/navigation_rail_menu.xml
+++ b/app/src/main/res/menu/navigation_rail_menu.xml
@@ -26,4 +26,10 @@
         android:icon="@drawable/people"
         android:title="@string/client"/>
 
+    <item
+        android:id="@+id/menu_item_photo"
+        android:enabled="true"
+        android:icon="@drawable/photo"
+        android:title="@string/Photo"/>
+
 </menu>
