--- a/app/src/main/res/menu/navigation_rail_menu.xml
+++ b/app/src/main/res/menu/navigation_rail_menu.xml
@@ -32,4 +32,10 @@
         android:icon="@drawable/photo"
         android:title="@string/Photo"/>
 
+    <item
+        android:id="@+id/menu_item_description"
+        android:enabled="true"
+        android:icon="@drawable/description"
+        android:title="@string/Description"/>
+
 </menu>
