--- a/app/src/main/res/layout/sensor.xml
+++ b/app/src/main/res/layout/sensor.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/email" />
 
     <TextView
         android:id="@+id/sensor"
