--- a/app/src/main/res/layout/activity_description.xml
+++ b/app/src/main/res/layout/activity_description.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="366dp"
         android:layout_height="526dp"
+        android:layout_marginTop="28dp"
         android:text="Bonjour, \n
 Au cours de ce projet, nous nous sommes principalement concentré sur le devellopement 'back end' de l'application. Les fonctionnalités que nous avons develloper ont été choisi pour leur interet technologique et non fonctionnel. \n \n
 Effectivement, nous avons travaillé avec des fragments pour les listes de donnée, des fonctionnalités de connexion par identification puis par utilisation de token dans les echanges client serveur. \n \n
@@ -17,16 +18,33 @@ Nous avons continuer notre apprentissage sur la partie map, cependant nous vouli
 Enfin, nous avons essayer de mettre en place un systeme de traitement d'image, celui est fonctionnel d'un point de vu serveur mais en cours de devellopement pour la partie application.   \n \n
 Cordialement  \n \n
 L'équie des apprentis développeur \n \n"
-        tools:layout_editor_absoluteX="22dp"
-        tools:layout_editor_absoluteY="79dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="22dp" />
 
     <Button
         android:id="@+id/btnapi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="jAVA JPA "
-        tools:layout_editor_absoluteX="263dp"
-        tools:layout_editor_absoluteY="645dp" />
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/DescriptionAPI"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/developer"
+        android:layout_width="187dp"
+        android:layout_height="186dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnapi"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.939"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/happy_developer" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
