--- a/app/src/main/res/layout/activity_descriptionapi.xml
+++ b/app/src/main/res/layout/activity_descriptionapi.xml
@@ -2,13 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <Button
+        android:id="@+id/btnappli"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/description_appli"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="387dp"
-        android:layout_height="678dp"
+        android:layout_width="384dp"
+        android:layout_height="620dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
         android:text="
 Pour ce qui est de la partie API, nous avons travaillé avec spring boot, JPA reposant sur un serveur local communiquant avec une base de donnée MySQL.  \n  \n
 
@@ -38,9 +50,8 @@ Images Controlleur :\n
 	 POST : nouveau image \n
 	 DELETE : image, List Image \n
 "
-        tools:layout_editor_absoluteX="15dp"
-        tools:layout_editor_absoluteY="27dp" />
-
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
