--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,32 +15,32 @@
         app:menu="@menu/navigation_rail_menu" />
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/city"
+        android:id="@+id/developer"
         android:layout_width="410dp"
         android:layout_height="510dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/city" />
+        app:lottie_rawRes="@raw/developer" />
 
     <TextView
         android:id="@+id/presentation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
+        android:height="150dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:textStyle="bold"
-        android:text="Bienvenue sur l'application des apprentis développeurs !"
+        android:text="Bienvenue sur \n l'application des \n  apprentis développeurs !"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/city" />
+        app:layout_constraintBottom_toTopOf="@id/developer" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
