--- a/app/src/main/res/layout/activity_photo.xml
+++ b/app/src/main/res/layout/activity_photo.xml
@@ -16,13 +16,13 @@
     <Button
         android:id="@+id/capture_btn"
         android:text="Capture Image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="200dp"
+        android:layout_height="60dp" />
 
     <Button
         android:id="@+id/envoiphoto"
-        android:text="Envoyer photo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="Envoyer photo" />
 
 </LinearLayout>
