--- a/app/src/main/res/layout/activity_sensor.xml
+++ b/app/src/main/res/layout/activity_sensor.xml
@@ -21,15 +21,15 @@
 
     <Button
         android:id="@+id/historique"
-        android:layout_width="173dp"
-        android:layout_height="42dp"
-        android:layout_marginRight="18dp"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:layout_marginRight="16dp"
         android:text="@string/Historique"
-        android:textSize="13dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="12dp"
         app:layout_constraintBottom_toTopOf="@id/sensor_list"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.21" />
 
     <Button
         android:id="@+id/enregisterSensor"
