--- a/app/src/main/res/layout/fragment_infolist.xml
+++ b/app/src/main/res/layout/fragment_infolist.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="@string/getData"
+        android:text="@string/obtenir_les_donn_es"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
