--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -48,7 +48,7 @@
         android:layout_height="71dp"
         android:layout_marginTop="108dp"
         android:layout_marginRight="20dp"
-        android:text="@string/espace"
+        android:text=""
         android:textSize="18dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
