--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -58,7 +58,7 @@
         android:id="@+id/projet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Projet Android"
+        android:text="@string/projet_android"
         android:textSize="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
