--- a/app/src/main/res/layout/activity_sensor.xml
+++ b/app/src/main/res/layout/activity_sensor.xml
@@ -19,22 +19,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/historique"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/Historique"
-        android:textSize="12dp"
-        app:layout_constraintBottom_toTopOf="@id/sensor_list"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/history"
+        android:layout_width="69dp"
+        android:layout_height="70dp"
+        android:layout_marginRight="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.21" />
+        android:layout_marginTop="10dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/history"></com.airbnb.lottie.LottieAnimationView>
 
     <Button
         android:id="@+id/enregisterSensor"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
         android:layout_marginRight="104dp"
         android:text="@string/Enregistrer"
         android:textSize="12dp"
